tests/ui/error-codes/E0508.stderr
error[E0508]: cannot move out of type `[NonCopy; 1]`, a non-copy array
  --> $DIR/E0508.rs:5:18
   |
LL |     let _value = array[0];
   |                  ^^^^^^^^
   |                  |
   |                  cannot move out of here
   |                  move occurs because `array[_]` has type `NonCopy`, which does not implement the `Copy` trait
   |
note: if `NonCopy` implemented `Clone`, you could clone the value
  --> $DIR/E0508.rs:1:1
   |
LL | struct NonCopy;
   | ^^^^^^^^^^^^^^ consider implementing `Clone` for this type
...
LL |     let _value = array[0];
   |                  -------- you could clone this value
help: consider borrowing here
   |
LL |     let _value = &array[0];
   |                  +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0508`.
